--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,28 +4,22 @@
     <group android:id="@+id/main_items">
     <item
         android:id="@+id/nav_tshirt"
-        android:title="T-Shirts"
-        android:icon="@drawable/tshirt" />
+        />
 
     <item
         android:id="@+id/nav_shirt"
-        android:title="Shirts"
-        android:icon="@drawable/shirt" />
+        />
 
     <item
         android:id="@+id/nav_pants"
-        android:title="Pants"
-        android:icon="@drawable/pants" />
+         />
 
     <item
         android:id="@+id/nav_shoes"
-        android:title="Shoes"
-        android:icon="@drawable/shoes" />
+        />
 
     <item
-        android:id="@+id/nav_watches"
-        android:title="Watches"
-        android:icon="@drawable/watch" />
+        android:id="@+id/nav_watches" />
     </group>
 
     <group android:id="@+id/back_button">
